# python-project-lvl3

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: Linter.yml
page_loader/: __init__.py  generators.py  get_and_save_content.py  loader.py  page_content.py  save_content.py
page_loader/scripts/: page_loader.py
tests/: test_content.py  test_exceptions.py  test_generators.py  test_regex.py  test_structure.py
tests/fixtures/: google-com.html  hexlet_test_page.html  modified_hexlet_test_page.html  modified_test_page.html  test_page.html  test_page2.html
