[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["takeitawaytu <takeitawaytu@gmail.com>"]

packages = [
  { include = "page_loader" },
]

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
responses = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
